--- a/Resources/physicscollision.plist
+++ b/Resources/physicscollision.plist
@@ -731,10 +731,65 @@
                         <key>polygons</key>
                         <array>
                             <array>
-                                <string>{ 61.00000,-47.00000 }</string>
-                                <string>{ -61.00000,-46.00000 }</string>
-                                <string>{ -57.00000,52.00000 }</string>
-                                <string>{ 58.00000,53.00000 }</string>
+                                <string>{ 77.00000,62.00000 }</string>
+                                <string>{ 78.00000,19.00000 }</string>
+                                <string>{ 66.00000,19.00000 }</string>
+                                <string>{ 63.00000,30.00000 }</string>
+                                <string>{ 63.00000,49.00000 }</string>
+                                <string>{ 65.00000,63.00000 }</string>
+                            </array>
+                            <array>
+                                <string>{ -60.00000,30.00000 }</string>
+                                <string>{ -78.00000,19.00000 }</string>
+                                <string>{ -76.00000,63.00000 }</string>
+                                <string>{ -64.00000,63.00000 }</string>
+                            </array>
+                            <array>
+                                <string>{ -36.00000,-19.00000 }</string>
+                                <string>{ -64.00000,-44.00000 }</string>
+                                <string>{ -64.00000,-24.00000 }</string>
+                            </array>
+                            <array>
+                                <string>{ -78.00000,19.00000 }</string>
+                                <string>{ -60.00000,30.00000 }</string>
+                                <string>{ -63.00000,19.00000 }</string>
+                            </array>
+                            <array>
+                                <string>{ 66.00000,-44.00000 }</string>
+                                <string>{ -64.00000,-44.00000 }</string>
+                                <string>{ 38.00000,-19.00000 }</string>
+                                <string>{ 64.00000,-24.00000 }</string>
+                            </array>
+                            <array>
+                                <string>{ 63.00000,30.00000 }</string>
+                                <string>{ 36.00000,20.00000 }</string>
+                                <string>{ 39.00000,41.00000 }</string>
+                                <string>{ 63.00000,49.00000 }</string>
+                            </array>
+                            <array>
+                                <string>{ 36.00000,20.00000 }</string>
+                                <string>{ -36.00000,-19.00000 }</string>
+                                <string>{ -35.00000,21.00000 }</string>
+                                <string>{ -7.00000,67.00000 }</string>
+                                <string>{ 9.00000,67.00000 }</string>
+                                <string>{ 39.00000,41.00000 }</string>
+                            </array>
+                            <array>
+                                <string>{ -36.00000,41.00000 }</string>
+                                <string>{ -35.00000,21.00000 }</string>
+                                <string>{ -60.00000,30.00000 }</string>
+                                <string>{ -62.00000,48.00000 }</string>
+                            </array>
+                            <array>
+                                <string>{ -7.00000,67.00000 }</string>
+                                <string>{ -35.00000,21.00000 }</string>
+                                <string>{ -36.00000,41.00000 }</string>
+                            </array>
+                            <array>
+                                <string>{ -64.00000,-44.00000 }</string>
+                                <string>{ -36.00000,-19.00000 }</string>
+                                <string>{ 36.00000,20.00000 }</string>
+                                <string>{ 38.00000,-19.00000 }</string>
                             </array>
                         </array>
                         
@@ -787,9 +842,9 @@
                         <key>polygons</key>
                         <array>
                             <array>
-                                <string>{ -46.00000,-52.00000 }</string>
-                                <string>{ 1.00000,80.00000 }</string>
-                                <string>{ 47.00000,-52.00000 }</string>
+                                <string>{ -39.00000,-62.00000 }</string>
+                                <string>{ 0.00000,80.00000 }</string>
+                                <string>{ 40.00000,-62.00000 }</string>
                             </array>
                         </array>
                         
@@ -1182,10 +1237,72 @@
                         <key>polygons</key>
                         <array>
                             <array>
-                                <string>{ 48.00000,54.00000 }</string>
-                                <string>{ 50.00000,-45.00000 }</string>
-                                <string>{ -46.00000,-45.00000 }</string>
-                                <string>{ -49.00000,53.00000 }</string>
+                                <string>{ 66.00000,61.00000 }</string>
+                                <string>{ 67.00000,18.00000 }</string>
+                                <string>{ 52.00000,48.00000 }</string>
+                                <string>{ 54.00000,62.00000 }</string>
+                            </array>
+                            <array>
+                                <string>{ -34.00000,-19.00000 }</string>
+                                <string>{ -55.00000,-44.00000 }</string>
+                                <string>{ -55.00000,-24.00000 }</string>
+                            </array>
+                            <array>
+                                <string>{ 52.00000,29.00000 }</string>
+                                <string>{ 67.00000,18.00000 }</string>
+                                <string>{ 55.00000,18.00000 }</string>
+                            </array>
+                            <array>
+                                <string>{ -50.00000,28.00000 }</string>
+                                <string>{ -68.00000,17.00000 }</string>
+                                <string>{ -66.00000,61.00000 }</string>
+                                <string>{ -54.00000,61.00000 }</string>
+                            </array>
+                            <array>
+                                <string>{ 57.00000,-44.00000 }</string>
+                                <string>{ -55.00000,-44.00000 }</string>
+                                <string>{ 35.00000,-19.00000 }</string>
+                                <string>{ 55.00000,-24.00000 }</string>
+                            </array>
+                            <array>
+                                <string>{ -68.00000,17.00000 }</string>
+                                <string>{ -50.00000,28.00000 }</string>
+                                <string>{ -53.00000,17.00000 }</string>
+                            </array>
+                            <array>
+                                <string>{ 67.00000,18.00000 }</string>
+                                <string>{ 36.00000,41.00000 }</string>
+                                <string>{ 52.00000,48.00000 }</string>
+                            </array>
+                            <array>
+                                <string>{ -34.00000,41.00000 }</string>
+                                <string>{ -33.00000,21.00000 }</string>
+                                <string>{ -50.00000,28.00000 }</string>
+                                <string>{ -52.00000,46.00000 }</string>
+                            </array>
+                            <array>
+                                <string>{ -7.00000,67.00000 }</string>
+                                <string>{ 9.00000,67.00000 }</string>
+                                <string>{ 36.00000,41.00000 }</string>
+                                <string>{ -33.00000,21.00000 }</string>
+                                <string>{ -34.00000,41.00000 }</string>
+                            </array>
+                            <array>
+                                <string>{ -55.00000,-44.00000 }</string>
+                                <string>{ -34.00000,-19.00000 }</string>
+                                <string>{ 33.00000,20.00000 }</string>
+                                <string>{ 35.00000,-19.00000 }</string>
+                            </array>
+                            <array>
+                                <string>{ 36.00000,41.00000 }</string>
+                                <string>{ 33.00000,20.00000 }</string>
+                                <string>{ -34.00000,-19.00000 }</string>
+                                <string>{ -33.00000,21.00000 }</string>
+                            </array>
+                            <array>
+                                <string>{ 36.00000,41.00000 }</string>
+                                <string>{ 52.00000,29.00000 }</string>
+                                <string>{ 33.00000,20.00000 }</string>
                             </array>
                         </array>
                         
